adding dynamicInputs Componet with validation

--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -6,4 +6,14 @@
 
     <button routerLink="/start">Guest -></button>
 
+    <div class='whiteBox'>
+
+
+        <div class="input-area">   
+            <app-input-field icon="mail" placeholder="example@email.com"  [required]="true"  pattern="^[a-zA-Z ]+$">> ></app-input-field>
+            <app-input-field icon="lock" placeholder="Password" [required]="true"  pattern="^[a-zA-Z ]+$">>  ></app-input-field>
+        </div>
+     
+    </div>
+
 </section>
