--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -1,9 +1,17 @@
 <app-login-animation></app-login-animation>
 <app-login-animation-inside></app-login-animation-inside>
 
+<aside>
+    <app-login-animation-inside></app-login-animation-inside>
+    <nav>
+        <ul>
+            <li><a>New at DABubble?</a></li>
+            <li><a>Create Account</a></li>
+        </ul>
+    </nav>
+</aside>
 
 <section class="MainWrapper">
-
  
     <div class='whiteBox'>
 
@@ -28,10 +36,10 @@
     </div>
 
     <nav class="submenu">
-            <ul>
-                <li><a>imprint</a></li>
-                <li><a>Data-Protection</a></li>
-            </ul>
+        <ul>
+            <li><a>imprint</a></li>
+            <li><a>Data-Protection</a></li>
+        </ul>
     </nav>
 
 </section>
