--- a/src/app/main-content/login/login.component.scss
+++ b/src/app/main-content/login/login.component.scss
@@ -1,13 +1,54 @@
 @import '../../../mixin.scss';
 .MainWrapper{
-    @include heightWidth($w: 100%, $h: 100%);
+    @include heightWidth($w: 100%, $h: 85dvh);
     @include dFlex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 1%;
 }
 
 app-input-field{
     @include heightWidth($w: 75%, $h: auto);
+}
+
+aside{
+    @include heightWidth($w: 100%, $h: auto);
+    @include figtree($fw: 400, $fs: 16px, $c: var(--secundary-bg));
+    @include dFlex ($jc: space-between);
+    text-align: right;
+
+    ul{
+        padding-top: 32px;
+        @include dFlex;
+        @include heightWidth($w: 100%, $h: auto);
+        flex-direction: column;
+        list-style: none;
+        margin-block-start: 0px;
+        margin-block-end: 0px;
+        padding-inline-start: 0px;
+        text-align: right;
+
+        li{
+            @include heightWidth($w: 100%, $h: auto);
+            text-align: right;
+            @include dFlex ($jc: flex-end);
+        }
+
+        a{          
+            @include heightWidth($w: 100%, $h: auto);
+            @include figtree($fw: 400, $fs: 18px, $c: var(--text-black));
+            margin: 0px 16px;
+            padding: 8px 16px;
+            border-radius: 36px;
+            text-wrap: nowrap;
+            text-align: right;
+
+            &:hover{
+                cursor: pointer;
+                color: var(--text-blue);
+            }
+        }
+    }
 }
 
 
@@ -52,7 +93,6 @@ button{
 }
 
 .whiteBox{
-    margin-top: 10dvh;
     @include heightWidth($w: 100%, $h: 100%);
     @include dFlex($jc: space-between);
     max-width: 600px;
@@ -146,7 +186,6 @@ button{
 .submenu{
     @include heightWidth($w: 90%, $h: auto);
     @include dFlex;
-    padding-top: 16px;
     ul{
         @include dFlex;
         list-style: none;
