--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -5,6 +5,7 @@
     background-color: var(--secundary-bg);
     border-radius: 30px;
     font-family: 'Nunito';
+    max-width: 318.33px;
 }
 
 .serverNavContent {
