--- a/src/app/main-content/thread/thread-header/thread-header.component.html
+++ b/src/app/main-content/thread/thread-header/thread-header.component.html
@@ -5,6 +5,6 @@
         <p class="thread-channel-name">Entwicklerteam</p>
     </div>
 
-    <button><mat-icon>close</mat-icon></button>
+    <button (click)="closeThread()"><mat-icon>close</mat-icon></button>
 </section>
 
