--- a/src/app/main-content/chat/member-message/member-message.component.html
+++ b/src/app/main-content/chat/member-message/member-message.component.html
@@ -1,26 +1,27 @@
 <div class="new-message-container">
     <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="isMessageHover = false">
-    <img src="{{message.profileImage}}" alt="">
-    <div class="message-container">
-        <div class="name">
-            <h5>{{message.name}}</h5>
-            <p>{{message.time}} Uhr</p>
+        <img src="{{message.profileImage}}" alt="">
+        <div class="message-container">
+            <div class="name">
+                <h5>{{message.name}}</h5>
+                <p>{{message.time}} Uhr</p>
+            </div>
+            <div class="message"><p>{{message.message}}</p>
+            </div>
+            <div class="answer-container">
+                <p class="answer">{{message.answers.answer.length}} Anwtorten</p>
+                <p class="answer-time">Letze Antwort 14:56</p>
+            </div>
         </div>
-        <div class="message"><p>{{message.message}}</p></div>
-        <div class="answer-container">
-            <p class="answer">{{message.answers.answer.length}} Anwtorten</p>
-            <p class="answer-time">Letze Antwort 14:56</p>
+        <div class="answer-date-time-container">
+            <p>{{message.createdAt}}</p>
         </div>
-    </div>
-    <div class="answer-date-time-container">
-        <p>{{message.createdAt}}</p>
-    </div>
 
-    <div class="options" *ngIf="isMessageHover">
-        <button class="options-btn"><img src="/img/reactions/like.svg" alt=""></button>
-        <button class="options-btn"><img src="/img/reactions/arm.svg" alt=""></button>
-        <button class="options-btn"><mat-icon>sentiment_satisfied</mat-icon></button>
-        <button class="options-btn"><mat-icon>comment</mat-icon></button>
+        <div class="options" *ngIf="isMessageHover">
+            <button class="options-btn"><img src="/img/reactions/like.svg" alt=""></button>
+            <button class="options-btn"><img src="/img/reactions/arm.svg" alt=""></button>
+            <button class="options-btn"><mat-icon>sentiment_satisfied</mat-icon></button>
+            <button class="options-btn"><mat-icon>comment</mat-icon></button>
+        </div>
     </div>
-</div>
 </div>
