--- a/src/app/main-content/thread/thread.component.html
+++ b/src/app/main-content/thread/thread.component.html
@@ -1,12 +1,12 @@
-<section>
-    <app-thread-header></app-thread-header>
-    <div class="main-message-container">
+<section *ngIf="threadIsOpen" @toggleThread>
+    <app-thread-header class="thread-item" (closeThreadEvent)="toggleThread()"></app-thread-header>
+    <div class="main-message-container thread-item">
 
-        <div *ngFor="let msg of messages">
+        <div *ngFor="let msg of messages" class="thread-item">
             <app-thread-my-message *ngIf="msg.user === 'myself'" [message]="msg"></app-thread-my-message>
             <app-thread-members-message *ngIf="msg.user === 'member'" [message]="msg"></app-thread-members-message>
         </div>
         
     </div>
-    <app-thread-message-field></app-thread-message-field>
+    <app-thread-message-field class="thread-item"></app-thread-message-field>
 </section>
