--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@
         --purple-2: #797EF3;
         --purple-3: #535AF1;
         --btn-gray: #686868;
+        --dg-btn-bg: #ECEEFE;
         --green: #92C83E;
         --border-light-purple: #ADB0D9;
 }
@@ -29,6 +30,7 @@
         --purple-2: #A4A8FF;
         --purple-3: #8E95FF;
         --btn-gray: #A1A1A1;
+        --dg-btn-bg: #ECEEFE;
         --green: #92C83E;
         --border-light-purple: #e3e3ee;
 }
