--- a/src/app/main-content/chat/member-message/member-message.component.scss
+++ b/src/app/main-content/chat/member-message/member-message.component.scss
@@ -44,6 +44,7 @@
         .answer {
             @include nunito($fw: 400, $fs: 18px, $c: var(--purple-3));
             margin-right: 20px;
+            cursor: pointer;
         }
 
         .answer-time {
