--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -1,4 +1,10 @@
 <section>
+    <div class="imgaes-preview-container">
+        <div class="image-container" *ngFor="let preview of imagePreviews; let i = index">
+            <img [src]="preview" alt="Bildvorschau">
+            <button (click)="deleteImage(i)" class="edite-images"><mat-icon>delete</mat-icon></button>
+        </div>
+      </div>
 
     <div class="message-field-container">
         <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField"></textarea>
@@ -6,17 +12,18 @@
         <div class="message-options-container">
 
             <div class="options-btn">
-                <button [matMenuTriggerFor]="menu"><mat-icon>add</mat-icon></button>
-                <mat-menu #menu="matMenu">
-                    <button mat-menu-item>Item 1</button>
-                    <button mat-menu-item>Item 2</button>
-                  </mat-menu>
+                <label for="file-upload" class="flie-label">
+                    <mat-icon class="open-file">add</mat-icon>
+                </label>
+                <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
+
+
                 <div class="between-line"></div>
                 <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
                 <button><mat-icon>alternate_email</mat-icon></button>
             </div>
 
-            <button class="send-btn" (click)="sendMessage()"><mat-icon>send</mat-icon></button>
+            <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn" (click)="sendMessage()"><mat-icon>send</mat-icon></button>
         </div>
 
         <div class="emojis-container" *ngIf="openEmojis">
