--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
@@ -2,6 +2,7 @@
 
 section {
     box-sizing: border-box;
+    position: relative;
     padding: 20px;
     @include heightWidth();
 }
@@ -70,5 +71,65 @@ section {
         position: absolute;
         bottom: 0px;
         left: 0px;
+    }
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.flie-label {
+    @include dFlex();
+    @include heightWidth($w: 35px, $h: 35px);
+    border-radius: 50%;
+
+    &:hover {
+        background-color: var(--primary-bg);
+    }
+}
+
+.open-file {
+    cursor: pointer;
+    @include materialSymbols($c: var(--btn-gray));
+}
+
+.imgaes-preview-container {
+    display: flex;
+    position: absolute;
+    top: -160px;
+    right: 20px;
+    left: 20px;
+    box-sizing: border-box;
+}
+
+.image-container {
+    height: 150px;
+    width: 130px;
+    border: 5px solid var(--primary-bg);
+    border-radius: 5px;
+    margin-right: 20px;
+    position: relative;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    .edite-images {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        background-color: var(--primary-bg);
+        color: rgba(255, 0, 0, 0.726);
+        border: none;
+        border-radius: 0px 0px 0px 5px;
+        cursor: pointer;
+        transition: all 200ms ease-in-out;
+
+        &:hover {
+            transform: scale(110%);
+        }
     }
 }
