--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -1,4 +1,13 @@
 <section>
+    <div *ngIf="showUserList" class="user-list">
+        <ul>
+          <li *ngIf="filteredUsers.length === 0">Kein Nutzer gefunden</li>
+          <li *ngFor="let user of filteredUsers" (click)="selectUser(user)">
+            {{ user }}
+          </li>
+        </ul>
+    </div>
+
     <div class="imgaes-preview-container">
         <div class="image-container" *ngFor="let preview of imagePreviews; let i = index">
             <img [src]="preview" alt="Bildvorschau">
@@ -7,7 +16,7 @@
       </div>
 
     <div class="message-field-container">
-        <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField"></textarea>
+        <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField"  (input)="onInput($event)"></textarea>
 
         <div class="message-options-container">
 
@@ -20,14 +29,14 @@
 
                 <div class="between-line"></div>
                 <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
-                <button><mat-icon>alternate_email</mat-icon></button>
+                <button (click)="addTag()"><mat-icon>alternate_email</mat-icon></button>
             </div>
 
             <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn" (click)="sendMessage()"><mat-icon>send</mat-icon></button>
         </div>
 
         <div class="emojis-container" *ngIf="openEmojis">
-            <emoji-mart title="Pick your emoji…" emoji="point_up"></emoji-mart>
+            <emoji-mart title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
         </div>
     </div>
 
